--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,13 +4,14 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - $(aws ecr get-login --no-include-email --region us-east-2)
   build:
     commands:
       - echo "Starting GTR--- MVN Install"
       - echo " << Start Date `date` >>"
       - mvn install
   post_build:
+    commands:
       - echo "Running Docker commands "
       - docker build -t opstomcat8:version-4 .
       - docker tag opstomcat8:version-4 019894823873.dkr.ecr.us-east-2.amazonaws.com/opstomcatdocker:5
